--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST =
-DB_PORT = 
-DB_USER =
-DB_NAME =
+DB_PORT = 5432
+DB_USER = "farxad"
+DB_NAME = "Test"
+DB_PASSWORD = "12345"
+DB_HOST = 'localhost'
