--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_PORT = 5432
-DB_USER = "farxad"
-DB_NAME = "Test"
-DB_PASSWORD = "12345"
+DB_PORT = 27017
+DB_USER = "chat_user"
+DB_NAME = "chatDb"
+DB_PASSWORD = "chat_secret"
 DB_HOST = 'localhost'
