--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.8",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "apollo-server-express": "^3.12.0",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.0",
     "graphql-tools": "^9.0.0",
+    "mongodb": "^5.9.2",
+    "mongoose": "^8.0.3",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
